--- a/index.html
+++ b/index.html
@@ -30,7 +30,14 @@
     some interesting footer content here
 </footer>
 
-<script src="public/js/jquery.1.8.min.js"></script>
+<script>
+    if ('__proto__' in {}){
+        document.write('<script src=public/js/zepto.min.js><\/script>');   
+    } else {
+        document.write('<script src=public/js/jquery.1.8.min.js><\/script>');   
+    }
+</script>
+
 <script src="public/js/main.js"></script>
 <!-- comment out grids: -->
 <script src="public/js/grids/grid.js"></script>
